--- a/irctc/src/main/resources/application.properties
+++ b/irctc/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.org.hibernate.SQL=DEBUG
+springdoc.api-docs.path=/api-docs
